fixed spacing on contact page

--- a/src/scss/default.scss
+++ b/src/scss/default.scss
@@ -296,7 +296,7 @@ section.timeStyles{
   border: solid 2px black;
   margin: auto;
   margin-top: 200px;
-  margin-bottom: 40px;
+  margin-bottom: 180px;
   padding-bottom: 20px;
   padding: 20px;
   width: 50%;
